Closed
Bug 451203
Opened 13 years ago
Closed 13 years ago
Unable to select text that has been highlighted by the find toolbar
Categories
(Core :: DOM: Selection, defect)
Core
DOM: Selection
Tracking
()
VERIFIED
FIXED
mozilla1.9.1b1
People
(Reporter: martijn.martijn, Assigned: graememcc)
References
Details
(Keywords: regression, testcase)
Attachments
(1 file)
974 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
This probably belongs more into Core->Selection, that's why I'm filing it in there, but you can see it with the Find toolbar. To reproduce: - Just search for a word or text with the find toolbar, that can be found on this page and then click on "Highlight all". - Then try to select something from inside the yellow area of one of the found items. Note that the highlighted text still can be selected from outside the highlighted area.
Comment 1•13 years ago
|
||
Same with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1a2pre) Gecko/20080819020844 Minefield/3.1a2pre ID:20080819020844
OS: Windows XP → All
Hardware: PC → All
Reporter | ||
Comment 2•13 years ago
|
||
Double-clicking and triple-clicking in the highlighted area seems to work all right, so it's only an issue for drag-selection.
Assignee | ||
Comment 3•13 years ago
|
||
Assignee: nobody → graememcc_firefox
Status: NEW → ASSIGNED
Attachment #334566 -
Flags: superreview?(roc)
Attachment #334566 -
Flags: review?(roc)
Attachment #334566 -
Flags: superreview?(roc)
Attachment #334566 -
Flags: superreview+
Attachment #334566 -
Flags: review?(roc)
Attachment #334566 -
Flags: review+
Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
Comment 4•13 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/2d31c20ce548
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b1
Updated•13 years ago
|
Keywords: checkin-needed
Reporter | ||
Comment 5•13 years ago
|
||
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b1pre) Gecko/20080908091724 Minefield/3.1b1pre
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•