Bug 451203 - Unable to select text that has been highlighted by the find toolbar. r+sr=roc